-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
Qt Creator 13.0.0-rc1
-
-
cc8126cf6 (dev)
If QML LSP is enabled, you are no longer able to use "Follow symbol under cursor" to navigate into imported module classes.
This functions with no issue if it is not enabled.
If QML LSP is enabled and disabled, follow symbol does not function until the editor is restarted.
See the attached video to show the error
For Gerrit Dashboard: QTCREATORBUG-30627 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
554096,4 | qmlls: go to definition for components | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |