qmlls: go to definition for components

Plumb QmlComponentIdentifier case in the findDefinitionsOf method.

Fixes: QTCREATORBUG-30627
Change-Id: I9fcd46d16c676c976140da0db0419be816b18f63
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>