src/qmlls/qqmllsutils.cpp
@@ -1790,12 +1790,17 @@ std::optional<QQmlLSUtilsLocation> QQmlLSUtils::findDefinitionOf(const DomItem &
         result.filename = domId.canonicalFilePath();
         return result;
     }
+    case QmlComponentIdentifier: {
+        QQmlLSUtilsLocation result;
+        result.sourceLocation = resolvedExpression->semanticScope->sourceLocation();
+        result.filename = resolvedExpression->semanticScope->filePath();
+        return result;
+    }
     case SingletonIdentifier:
     case EnumeratorIdentifier:
     case EnumeratorValueIdentifier:
     case AttachedTypeIdentifier:
     case GroupedPropertyIdentifier:
-    case QmlComponentIdentifier:
         qCDebug(QQmlLSUtilsLog) << "QQmlLSUtils::findDefinitionOf was not implemented for type"
                                 << resolvedExpression->type;
         return {};
